@@ -1,3 +1,5 @@
+- MANTA-70 Correct filters to allow for small inversion and tandem dup
+detection 
 - MANTA-68 SVLEN not set correctly for non-deletions
 - MANTA-64 Improve candidate generation for small regions
 - MANTA-43 allow manta installation to be relocated
